# ChangeLog for dev-lang/perl
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/perl/ChangeLog,v 1.311 2010/01/24 21:49:40 ranger Exp $

  24 Jan 2010; Brent Baude <ranger@gentoo.org> perl-5.10.1.ebuild:
  Marking perl-5.10.1 ~ppc64 for bug 288028

  17 Jan 2010; Torsten Veller <tove@gentoo.org> -perl-5.8.8-r5.ebuild,
  -perl-5.8.8-r6.ebuild, -files/perl-5.8.8-CAN-2005-0448-rmtree.patch:
  Cleanup

  10 Dec 2009; Brent Baude <ranger@gentoo.org> perl-5.8.8-r8.ebuild:
  Marking perl-5.8.8-r8 ppc64 for bug 295028

  10 Dec 2009; Raúl Porcel <armin76@gentoo.org> perl-5.8.8-r8.ebuild:
  alpha/ia64/m68k/s390/sh stable wrt #295028

  09 Dec 2009; nixnut <nixnut@gentoo.org> perl-5.8.8-r8.ebuild:
  ppc stable #295028

  09 Dec 2009; Raúl Porcel <armin76@gentoo.org> perl-5.10.1.ebuild:
  Add ~sh wrt #288028

  08 Dec 2009; Jeroen Roovers <jer@gentoo.org> perl-5.8.8-r8.ebuild:
  Stable for HPPA (bug #295028).

  08 Dec 2009; Tiago Cunha <tcunha@gentoo.org> perl-5.8.8-r8.ebuild:
  stable sparc, bug 295028

  03 Dec 2009; Markus Meier <maekke@gentoo.org> perl-5.8.8-r8.ebuild:
  amd64/arm/x86 stable, bug #295028

  16 Nov 2009; Raúl Porcel <armin76@gentoo.org> perl-5.10.1.ebuild:
  Add ~alpha/~ia64/~s390/~sparc wrt #288028

  15 Nov 2009; Torsten Veller <tove@gentoo.org> perl-5.10.1.ebuild:
  Add patch for ICE on ia64 (#293312)

  15 Nov 2009; Raúl Porcel <armin76@gentoo.org> perl-5.10.1.ebuild:
  Add ~m68k wrt #288028, thanks to kolla for testing

  15 Nov 2009; Torsten Veller <tove@gentoo.org> perl-5.10.1.ebuild:
  Disable parallel tests (#293241)

  15 Nov 2009; Torsten Veller <tove@gentoo.org> perl-5.8.8-r8.ebuild,
  +files/perl-5.8.8-libnet-hostname.patch:
  Add libnet hostname patch from perl-core/libnet

  14 Nov 2009; Torsten Veller <tove@gentoo.org> perl-5.8.8-r8.ebuild,
  perl-5.10.1.ebuild:
  Check for alternative scripts in ROOT

*perl-5.8.8-r8 (14 Nov 2009)
