@@ -48,9 +48,9 @@ AUX perl-regexp-nossp.patch 460 RMD160 dde3a25904275896e98d7b7f3a02926c8dbc5ca5 
 DIST perl-5.10.1-9.tar.bz2 7388 RMD160 3758c2c78e22ed55fb90db283cfd9e5998535903 SHA1 edd1150deee51079be514f8ae8a3b14b1912c0ef SHA256 bd84671e6686288c098c26c0a61d1b8471ab38d8c16fb87571011398770cef44
 DIST perl-5.10.1.tar.bz2 11608061 RMD160 840b3a5ac3d7f517770ce789676ebd9154d9ee5a SHA1 98b762b5cd4fb76dd354dfa5ba0d21bc2acacaf2 SHA256 9385f2c8c2ca8b1dc4a7c31903f1f8dc8f2ba867dc2a9e5c93012ed6b564e826
 DIST perl-5.8.8.tar.bz2 10123359 RMD160 e78f26d9b96e6db35f946ad4ff55e3a69385c71b SHA1 4aab490040727ca4419098720eca2ba4367df539 SHA256 818a140d9c04ea8dab3a05104b34ced7f7d9d0a91bfed91baf89a84d0dfb1bc9
-EBUILD perl-5.10.1.ebuild 20433 RMD160 f482effccb73f57e4cd1d5cae516cff8156befba SHA1 7cbd1a378af39b7056252fe8866b0894971922cd SHA256 4d106aafba1a81bd677b0d069412703dd9e0e5fa9cbb88bc552930f0ebfe8ec8
+EBUILD perl-5.10.1.ebuild 20444 RMD160 9708649ec31fd2cec5c772fe7018709d61b21092 SHA1 8c994c4357435e0a7cad00f45490ea5738bb6109 SHA256 a8264e7fd4599d3016141269b7f38611dc47d47dc1ae07e6931390e46479d8ba
 EBUILD perl-5.8.8-r5.ebuild 21973 RMD160 2443d6813ec1f79dbc8aa163c4e7631b0b0d98a8 SHA1 7984ca89b5053717c4bc79daa3aca582f4f07249 SHA256 3b42cbf1a72cb7b88eb63564844ba84bdeb57f454bfefe5eff96e5b7fef6b097
 EBUILD perl-5.8.8-r6.ebuild 22434 RMD160 da4fef69305697e28144d7aac9bba85383701d35 SHA1 fc55cd63ed8c0aea45fcc39bd41e551c8632ac2f SHA256 0f83c42d52ebfeb55752eb19d76b31888be55c2d663dbddefa5b5c4e786393a8
-EBUILD perl-5.8.8-r8.ebuild 23996 RMD160 dd663ce15f026ae7827e6382ea8bc99735e19a98 SHA1 6d63b6bbbb1e4b2ec71653a81fb543f2ec4ef9c5 SHA256 3be8c5ead198bc97f2946deff1897f3f7199ff8d7096d462725212c4e80695cc
-MISC ChangeLog 64271 RMD160 5152285123990e237a0cabaacfa81427e287d1cf SHA1 4e59fb1eecb836d3d6075f71bc3b100e50cf26fc SHA256 aee3675111a5b3caa20cfdc097291f94d782420f0e6d30acbbf2b5a6597f7b0b
+EBUILD perl-5.8.8-r8.ebuild 24008 RMD160 9e344cbf34743e327061cd84f817a3c38bff0da0 SHA1 d4812b38b53dc08c8b17fd27961249eccda2304e SHA256 81e2d6e59de4fb05d7f001a803a2f38d50190e73bc2e4c3889f813d28650dd82
+MISC ChangeLog 64477 RMD160 a2c1aa2c453247953a241bd8b4f8f298bd122de0 SHA1 865017eca08ee3bb5d19eaab4c725d4c4df81f1a SHA256 3f5b630f07b7786bdf367845d2a058d5a144e6f7c9e8ab9c9a5f6d11c4987d08
 MISC metadata.xml 451 RMD160 8424230d79d13df7462c454050058b3526a78e92 SHA1 1ae85db5c1c1fc6413ca324ebc93b6894831b437 SHA256 49e06011c113616fa1f618cf58d42c2d6abbce5f71936f109b6ae3a5dfff587c
