@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/perl
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/perl/ChangeLog,v 1.311 2010/01/24 21:49:40 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/perl/ChangeLog,v 1.312 2010/02/03 00:18:06 hanno Exp $
+
+  03 Feb 2010; Hanno Boeck <hanno@gentoo.org> perl-5.8.8-r8.ebuild,
+  perl-5.10.1.ebuild:
+  Change license, Perl is Artistic or GPL-1 or later. We can't express or
+  later for now, so adding all GPL-1/2/3.
 
   24 Jan 2010; Brent Baude <ranger@gentoo.org> perl-5.10.1.ebuild:
   Marking perl-5.10.1 ~ppc64 for bug 288028
